After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 769830 - Fix annotation
Fix annotation
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2016-08-13 12:23 UTC by Mathieu Bridon
Modified: 2016-08-25 14:45 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix annotation (1.02 KB, patch)
2016-08-13 12:23 UTC, Mathieu Bridon
committed Details | Review

Description Mathieu Bridon 2016-08-13 12:23:46 UTC
Bindings are broken without this.
Comment 1 Mathieu Bridon 2016-08-13 12:23:50 UTC
Created attachment 333213 [details] [review]
Fix annotation

Bindings are broken without this.
Comment 2 Victor Toso 2016-08-25 14:42:19 UTC
Review of attachment 333213 [details] [review]:

Looks good
Comment 3 Mathieu Bridon 2016-08-25 14:45:04 UTC
Attachment 333213 [details] pushed as 75448d8 - Fix annotation