Fix annotation

Bindings are broken without this.

https://bugzilla.gnome.org/show_bug.cgi?id=769830